# server-setup

./: .gitignore  README.md  pyproject.toml
ansible/: ansible.cfg  hosts
ansible/group_vars/: all.yaml
ansible/playbooks/: ansible_users.yaml  docker.yaml
ansible/roles/igor_nikiforov.docker/meta/: .galaxy_install_info
ansible/roles/robertdebock.python_pip/meta/: .galaxy_install_info
terraform/: Makefile  main.tf  terraform.tfvars.tamplate
