[tool.poetry]
name = "server-setup"
version = "0.1.0"
description = ""
authors = ["E1-Bart0 <starovoitov.vadik1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
